# TheRayTracerChallenge

./: CMakeLists.txt  LICENSE  README.md  Raymond.sln
Raymond/: Background.cpp  Background.h  BoundingBox.cpp  BoundingBox.h  Camera.cpp  Camera.h  Canvas.cpp  Canvas.h  Color.cpp  Color.h  Constants.h  IxComps.cpp  IxComps.h  Light.cpp  Light.h  Material.cpp  Material.h  Matrix.cpp  Matrix.h  Noise.cpp  Noise.h  Object.cpp  Object.h  Primitive.cpp  Primitive.h  PrimitiveDefinition.cpp  PrimitiveDefinition.h  Quadtree.cpp  Quadtree.h  Ray.cpp  Ray.h  Raymond.cpp  Raymond.vcxproj  Raymond.vcxproj.filters  Sample.cpp  Sample.h  SampleBuffer.cpp  SampleBuffer.h  SamplerGrid.cpp  SamplerGrid.h  (+11 more)
RaymondUnitTester/: RaymondUnitTester.vcxproj  RaymondUnitTester.vcxproj.filters  pch.h  test.cpp
Sample-Test1/: Sample-Test1.vcxproj
chapters/: TRTC_Chapter_01.txt  TRTC_Chapter_08.txt  TRTC_Chapter_09.txt  TRTC_Chapter_10.txt  TRTC_Chapter_11.txt  TRTC_Chapter_12.txt  TRTC_Chapter_xx.txt
